--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "prac": "node prac1.js",
-    "run": "node "
+    "relt": "node relations.js"
   },
   "author": "",
   "license": "ISC",
